--- a/index.html
+++ b/index.html
@@ -252,13 +252,9 @@
     <p><q>即便知道資料在哪，可是資料還是如同<code>一盤散沙</code></q>
 <img src = './resources/figures/R_ETL_RAWDATA.png' height="350px"></img></p>
 
-<p>--- .quote </p>
+<hr>
 
-<p>adfaf</p>
-
-<p>--- .quote </p>
-
-<p><q> 等等 先安裝幾個建議的套件</q></p>
+<h2>等等 先安裝幾個建議的套件</h2>
 
 <ul>
 <li><code>DSC2014Tutorial</code> R社群為了這次Tutorial製作的套件，所有的教材都在這了</li>
@@ -281,12 +277,13 @@ install.packages(&#39;DSC2014Tutorial&#39;, repo = &#39;http://54.92.61.128/R&#3
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-12" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-12" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>我們ETL會用到的有</h2>
+  </hgroup>
   <article data-timings="">
-    <p><q> 我們ETL會用到的有 </q></p>
-
-<ul>
+    <ul>
 <li><code>dplyr</code> 可用類似SQL語法操作data frome</li>
 <li><code>xts</code> 處理時間格式好用的套件</li>
 <li><code>gdata</code> 可以處理Excel 2007以上的文件</li>
@@ -2934,7 +2931,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=12 title=''>
+        data-slide=12 title='我們ETL會用到的有'>
          12
       </a>
     </li>
