--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 <li><code>DSC2014Tutorial</code> R社群為了這次Tutorial製作的套件，所有的教材都在這了</li>
 </ul>
 
-<pre><code class="r">deps &lt;- available.packages(&quot;http://54.92.61.128/R&quot;)[1,&quot;Depends&quot;]
+<pre><code>deps &lt;- available.packages(&quot;http://54.92.61.128/R&quot;)[1,&quot;Depends&quot;]
 pkgs &lt;- strsplit(gsub(&quot;\\s&quot;, &quot;&quot;, deps), &quot;,&quot;)[[1]]
 for(pkg in pkgs) {
   install.packages(pkg)
@@ -270,7 +270,7 @@ install.packages(&#39;DSC2014Tutorial&#39;, repo = &#39;http://54.92.61.128/R&#3
 
 <p>安裝之後, 輸入以下指令就可以打開投影片:</p>
 
-<pre><code class="r">slides(&quot;ETL&quot;)
+<pre><code>slides(&quot;ETL&quot;)
 </code></pre>
 
   </article>
