--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <slide class="" id="slide-12" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>等等 先安裝幾個建議的套件</h2>
+    <h2>DSC的One Piece</h2>
   </hgroup>
   <article data-timings="">
     <ul>
@@ -2937,7 +2937,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=12 title='等等 先安裝幾個建議的套件'>
+        data-slide=12 title='DSC的One Piece'>
          12
       </a>
     </li>
