--- a/index.html
+++ b/index.html
@@ -2445,7 +2445,7 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
 
 <p>先<code>建立資料集</code></p>
 
-<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),
+<pre><code class="r">x=data.frame(c1 = c(1,1,2,3,4,5,5),
              c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 y=data.frame(c1 = c(1,2,2,3,4,6,6),
              c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
@@ -2495,8 +2495,13 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
 <pre><code class="r">inner_join(x,y,by=&quot;c1&quot;)
 </code></pre>
 
-<pre><code>## Error: no applicable method for &#39;inner_join&#39; applied to an object of class
-## &quot;c(&#39;double&#39;, &#39;numeric&#39;)&quot;
+<pre><code>##   c1 c2.x c2.y
+## 1  1    A    A
+## 2  1    B    A
+## 3  2    C    B
+## 4  2    C    C
+## 5  3    D    D
+## 6  4    E    E
 </code></pre>
 
 </div>
