--- a/index.html
+++ b/index.html
@@ -382,10 +382,13 @@ install.packages(&#39;DSC2014Tutorial&#39;, repo = &#39;http://54.92.61.128/R&#3
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-20" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-20" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2><code>ETL</code> 第一步</h2>
+  </hgroup>
   <article data-timings="">
-    <p><q> 好! 開始動手做吧!</q></p>
+    <p><img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -800,6 +803,10 @@ View(Cl_info)
   <article data-timings="">
     <p><q>讓我們來練習抓下一個資料<code>GDP</code></q></p>
 
+<h2><code>ETL</code> 第二步</h2>
+
+<p><img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -1026,7 +1033,10 @@ GDP_part4 = select(GDP_part3,year,season,GDP)
     <h2>學習，實作，觀察 STEP3</h2>
   </hgroup>
   <article data-timings="">
-    
+    <h2><code>ETL</code> 第三步</h2>
+
+<p><img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -2104,7 +2114,10 @@ text(x, y, labels = row.names(t(final_tbl)), cex=.7)
     <h2>學習，實作，觀察 STEP4</h2>
   </hgroup>
   <article data-timings="">
-    
+    <h2><code>ETL</code> 最後一步</h2>
+
+<p><img src = './resources/figures/R_ETL_ETL_2.png' height="350px"></img></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -2929,7 +2942,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=20 title=''>
+        data-slide=20 title='<code>ETL</code> 第一步'>
          20
       </a>
     </li>
