--- a/index.html
+++ b/index.html
@@ -491,11 +491,10 @@ str(Cl_info)
   <article data-timings="">
     <p><img src = './resources/figures/R_ETL_EXP1.png' height="350px"></img></p>
 
-<blockquote>
-<p><code>etl_dt</code> <code>data_dt</code> 是<code>文字</code>但應該是<code>時間</code></p>
-
-<p><code>bank_code</code> 也是<code>文字</code>但應該是<code>factor</code></p>
-</blockquote>
+<ul>
+<li><code>etl_dt</code> <code>data_dt</code> 是<code>文字</code>但應該是<code>時間</code></li>
+<li><code>bank_code</code> 也是<code>文字</code>但應該是<code>factor</code></li>
+</ul>
 
   </article>
   <!-- Presenter Notes -->
@@ -660,7 +659,7 @@ str(Cl_info_part)
 <slide class="" id="slide-34" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>練習-增加<code>特徵</code>欄位(1/3)</h2>
+    <h2>練習-增加<code>特徵</code>欄位(1/2)</h2>
   </hgroup>
   <article data-timings="">
     <h3>dplyr <code>mutate</code> 用來增加<strong>非彙總</strong>計算<code>欄位</code></h3>
@@ -697,7 +696,7 @@ str(Cl_info_part)
 <slide class="" id="slide-35" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>練習-增加<code>特徵</code>欄位(2/3)</h2>
+    <h2>練習-增加<code>特徵</code>欄位(2/2)</h2>
   </hgroup>
   <article data-timings="">
     <h3>dplyr <code>mutate</code> 用來增加<strong>非彙總</strong>計算<code>欄位</code></h3>
@@ -730,19 +729,6 @@ str(Cl_info_part)
 <slide class="" id="slide-36" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>練習- 增加<code>特徵</code>欄位(3/3)</h2>
-  </hgroup>
-  <article data-timings="">
-    <pre><code>Cl_info_part2 = mutate(Cl_info_part,time= as.POSIXct(data_dt))
-</code></pre>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="" id="slide-37" style="background:; background-repeat:no-repeat; background-position:center; ">
-  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
-  <hgroup>
     <h2>練習-<code>排序</code>資料(1/2)</h2>
   </hgroup>
   <article data-timings="">
@@ -773,7 +759,7 @@ str(Cl_info_part)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-38" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-37" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>練習-<code>排序</code>資料(2/2)</h2>
@@ -803,6 +789,26 @@ str(Cl_info_part)
  <p><img src = './resources/figures/R_ETL_DPLYR_ARRANGE.png'></img></p>
 
 </div>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-38" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>練習時間</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>請幫忙從Cl_info_part找出<code>data_dt</code>,<code>bank_nm</code>,<code>mortgage_bal</code></li>
+<li>請幫忙從Cl_info_part挑選出<code>mortgage＿bal</code>大於1千萬的銀行資料</li>
+<li>請幫忙排序Cl_info_part出<code>mortgage＿bal</code>由小到大，但資料時間<code>data_dt</code>從大到小</li>
+<li>請執行下面程式碼，我們後續會利用<code>Cl_info_part2</code></li>
+</ol>
+
+<pre><code>Cl_info_part2 = mutate(Cl_info_part,time= as.POSIXct(data_dt))
+</code></pre>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -3072,31 +3078,31 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=34 title='練習-增加<code>特徵</code>欄位(1/3)'>
+        data-slide=34 title='練習-增加<code>特徵</code>欄位(1/2)'>
          34
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='練習-增加<code>特徵</code>欄位(2/3)'>
+        data-slide=35 title='練習-增加<code>特徵</code>欄位(2/2)'>
          35
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=36 title='練習- 增加<code>特徵</code>欄位(3/3)'>
+        data-slide=36 title='練習-<code>排序</code>資料(1/2)'>
          36
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=37 title='練習-<code>排序</code>資料(1/2)'>
+        data-slide=37 title='練習-<code>排序</code>資料(2/2)'>
          37
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=38 title='練習-<code>排序</code>資料(2/2)'>
+        data-slide=38 title='練習時間'>
          38
       </a>
     </li>
